# ILI-Digital

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Data Manipulation/: Descrition_enriched.ipynb  cleaned_companies_data.csv  companies_data.csv  companies_enriched_deepseek.csv  data-manipulation.ipynb
RAG Notebook/: e.ipynb  llm_judge_results.csv  references.csv
app/: app.py  rag_functions.py
chroma_db/: chroma.sqlite3
