[project]
name = "ili-digital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.7",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.5",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "pydantic>=2.0.0",
    "streamlit>=1.52.2",
]
